# rl4burn

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cookbook.md  introduction.md
book/src/algorithms/: behavioral-cloning.md  distillation.md  dqn.md  dual-clip-ppo.md  ppo.md
book/src/building-blocks/: gae.md  grad-clip.md  init.md  intrinsic-rewards.md  logging.md  losses.md  multi-head-value.md  percentile-normalize.md  polyak.md  replay-buffer.md  saving-sharing.md  sequence-replay.md  upgo.md  vtrace.md
book/src/burn-compat/: autodiff.md
book/src/concepts/: environments.md  spaces.md  vec-env.md  wrappers.md
book/src/game-ai/: agent-branching.md  beta-vae.md  cloud-deploy.md  cspl.md  distributed.md  league.md  mcts.md  multi-agent.md  pfsp.md  privileged-critic.md  self-play.md  z-conditioning.md
book/src/getting-started/: first-agent.md  installation.md
book/src/nn/: attention.md  autoregressive.md  film.md  kl-balance.md  rnn.md  symlog.md  transformer.md
book/src/papers/: alphastar.md  dreamerv3.md  juewu.md  scc.md
book/src/world-models/: dreamer-overview.md  imagination.md  r2dreamer.md  rssm.md
crates/rl4burn-algo/: Cargo.toml
crates/rl4burn-algo/src/: lib.rs
crates/rl4burn-algo/src/base/: ac.rs  dqn.rs  ppo.rs  ppo_masked.rs
crates/rl4burn-algo/src/dreamer/: mod.rs
crates/rl4burn-algo/src/imitation/: behavioral_cloning.rs  distillation.rs
crates/rl4burn-algo/src/loss/: kl_balance.rs  mod.rs  multi_head_value.rs  representation.rs
crates/rl4burn-algo/src/multi_agent/: league.rs  pfsp.rs  self_play.rs  utils.rs
crates/rl4burn-algo/src/planning/: imagination.rs  mod.rs
crates/rl4burn-cloud/: Cargo.toml
crates/rl4burn-cloud/src/: lib.rs  provider.rs  runpod.rs  vastai.rs
crates/rl4burn-collect/: Cargo.toml
crates/rl4burn-collect/src/: actor_learner.rs  centralized_inference.rs  intrinsic.rs  lib.rs  percentile_normalize.rs  replay.rs  trajectory.rs
crates/rl4burn-core/: Cargo.toml
crates/rl4burn-core/src/: error.rs  lib.rs
crates/rl4burn-core/src/deploy/: mod.rs  provider.rs  runpod.rs  vastai.rs
crates/rl4burn-core/src/env/: adapter.rs  mod.rs  render.rs  wrapper.rs
crates/rl4burn-core/src/log/: json.rs  stats.rs
crates/rl4burn-envs/: Cargo.toml
crates/rl4burn-envs/src/: acrobot.rs  cartpole.rs  gridworld.rs  lib.rs  lunar_lander.rs  lunar_lander_continuous.rs  mountain_car.rs  mountain_car_continuous.rs  pendulum.rs  render_util.rs
crates/rl4burn-nn/: Cargo.toml
crates/rl4burn-nn/src/: attention.rs  autoregressive.rs  conv.rs  dist.rs  film.rs  lib.rs  mlp.rs  multi_encoder.rs  policy.rs  rssm.rs  symlog.rs  vae.rs
crates/rl4burn-tune/: Cargo.toml
crates/rl4burn-tune-py/: Cargo.toml
crates/rl4burn-tune-py/src/: lib.rs
crates/rl4burn-tune/src/: distributions.rs  lib.rs  multi_objective.rs  proofs.rs  study.rs  trial.rs
crates/rl4burn-tune/src/importance/: fanova.rs  mod.rs  ped_anova.rs
crates/rl4burn-tune/src/pruners/: hyperband.rs  median.rs  mod.rs  nop.rs  patient.rs  percentile.rs  successive_halving.rs  threshold.rs  wilcoxon.rs
crates/rl4burn-tune/src/samplers/: brute_force.rs  cmaes.rs  gp.rs  grid.rs  mod.rs  nsga2.rs  qmc.rs  random.rs  tpe.rs
crates/rl4burn-tune/src/storage/: in_memory.rs  journal.rs  mod.rs
examples/: ppo_cartpole.rs  ppo_pendulum.rs
examples/action-masking/: Cargo.toml
examples/action-masking/src/: main.rs
examples/config-driven/: Cargo.toml
examples/config-driven/configs/: default.toml
examples/config-driven/src/: main.rs
examples/curriculum/: Cargo.toml
examples/curriculum/src/: main.rs
examples/custom-env/: Cargo.toml
examples/custom-env/src/: main.rs
examples/deploy-cloud/: Cargo.toml
examples/deploy-cloud/src/: main.rs
examples/deploy-policy/: Cargo.toml
examples/deploy-policy/src/: main.rs
examples/diagnostics/: Cargo.toml
examples/diagnostics/src/: main.rs
examples/dreamer/: Cargo.toml
examples/dreamer/src/: main.rs
examples/hyperparameter-tuning/: Cargo.toml
examples/hyperparameter-tuning/src/: main.rs
examples/lstm-policy/: Cargo.toml
examples/lstm-policy/src/: main.rs
examples/multi-agent/: Cargo.toml
examples/multi-agent/src/: main.rs
examples/ppo-annotated/: Cargo.toml
examples/ppo-annotated/src/: main.rs
examples/ppo-continuous/: Cargo.toml
examples/ppo-continuous/src/: main.rs
examples/ppo-multi-discrete/: Cargo.toml
examples/ppo-multi-discrete/src/: main.rs
examples/quickstart/: Cargo.toml
examples/quickstart/src/: main.rs
examples/reward-shaping/: Cargo.toml
examples/reward-shaping/src/: main.rs
examples/self-play/: Cargo.toml
examples/self-play/src/: main.rs
rl4burn/: Cargo.toml
rl4burn/examples/: ppo_pendulum.rs
rl4burn/src/: lib.rs
rl4burn/tests/: dqn_cartpole.rs  ppo_cartpole.rs  ppo_continuous.rs  ppo_multi_discrete.rs
scripts/: requirements-dev.txt  test_tpe_differential.py  wandb_bridge.py
src/: advantage.rs  clip.rs  dqn.rs  env.rs  gae.rs  init.rs  lib.rs  loss.rs  policy.rs  polyak.rs  ppo.rs  replay.rs  space.rs  vec_env.rs  vtrace.rs  wrapper.rs
src/algo/: cspl.rs  distillation.rs  distributed.rs  dqn.rs  imagination.rs  league.rs  mcts.rs  mod.rs  pfsp.rs  ppo.rs  ppo_masked.rs  privileged_critic.rs  self_play.rs  z_conditioning.rs
src/algo/base/: ac.rs  dqn.rs  mod.rs  ppo_masked.rs
src/algo/imitation/: behavioral_cloning.rs  distillation.rs  mod.rs
src/algo/multi_agent/: mod.rs
src/collect/: actor_learner.rs  centralized_inference.rs  mod.rs  replay.rs  sequence_replay.rs  upgo.rs  vtrace.rs
src/env/: mod.rs  vec_env.rs  wrapper.rs
src/envs/: cartpole.rs  gridworld.rs  mod.rs  pendulum.rs
src/log/: mod.rs  stats.rs  tensorboard.rs  video.rs
src/loss/: mod.rs  multi_head_value.rs
src/nn/: autoregressive.rs  clip.rs  dist.rs  kl_balance.rs  mod.rs  rnn.rs  rssm.rs
tests/: dqn_cartpole.rs  gradient_flow.rs  impala_cartpole.rs  logging_and_video.rs  ppo_cartpole.rs  ppo_continuous.rs  ppo_masked_cartpole.rs  ppo_multi_discrete.rs
(+1 files in other folders)
