[workspace]
members = [
    "crates/rl4burn-core",
    "crates/rl4burn-nn",
    "crates/rl4burn-collect",
    "crates/rl4burn-algo",
    "crates/rl4burn-envs",
    "rl4burn",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RPP1011/rl4burn"

[workspace.dependencies]
burn = { version = "0.20", default-features = false, features = ["std"] }
contracts = "0.6"
rand = "0.10"
rand_distr = "0.6"
crc32c = { version = "0.6" }
gif = { version = "0.13" }
