[package]
name = "rl4burn-tune"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hyperparameter search algorithms inspired by Optuna, for rl4burn"

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
